--- a/Pooling for Sequencing.ipynb
+++ b/Pooling for Sequencing.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
@@ -104,12 +104,6 @@
     "\n",
     "    Sequencer = tk.Tk()\n",
     "\n",
-    "\n",
-    "\n",
-    "    #greeting = tk.Label(text=\"Pick your sequencer:\")\n",
-    "    #label = tk.Label(text=\"Sequencer Options\")\n",
-    "\n",
-    "\n",
     "    variable = tk.StringVar(Sequencer)\n",
     "    variable.set(OPTIONS[0]) # default value\n",
     "\n",
@@ -122,6 +116,9 @@
     "    def ok():\n",
     "        picked_sequencer = variable.get()\n",
     "        return (picked_sequencer)\n",
+    "     \n",
+    "        ### why isn't this returning? I know it's a scope issue, but I can't save output as \n",
+    "        ###variable the way that I'm used to with that button command below :( \n",
     "        \n",
     "    button = tk.Button(Sequencer, text=\"OK\", command=ok)\n",
     "    button.pack()\n",
@@ -131,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,62 +140,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'picked_sequencer' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-263240bbee7e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-22-7862e5f46e6c>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0msequencer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpick_sequencer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0msequencer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-21-4d28ac94cbfe>\u001b[0m in \u001b[0;36mpick_sequencer\u001b[0;34m()\u001b[0m\n\u001b[1;32m     60\u001b[0m     \u001b[0mbutton\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 62\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mpicked_sequencer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     63\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m     \u001b[0mSequencer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmainloop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'picked_sequencer' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
      ]
     }
    ],
    "source": [
     "main()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "'''def pick_sequencer():\n",
-    "    sf = \"value is %s\" % var.get()\n",
-    "    root.title(sf)\n",
-    "    # optional\n",
-    "    color = var.get()\n",
-    "    root['bg'] = color\n",
-    "\n",
-    "\n",
-    "root = tk.Tk()\n",
-    "# use width x height + x_offset + y_offset (no spaces!)\n",
-    "root.geometry(\"%dx%d+%d+%d\" % (330, 80, 200, 150))\n",
-    "root.title(\"Pick Your Sequencer\")\n",
-    "\n",
-    "var = tk.StringVar(root)\n",
-    "# initial value\n",
-    "var.set('novseq')\n",
-    "\n",
-    "choices = ['novseq', 'nextseq', 'iseq']\n",
-    "option = tk.OptionMenu(root, var, *choices)\n",
-    "option.pack(side='left', padx=10, pady=10)\n",
-    "\n",
-    "button = tk.Button(root, text=\"check value selected\", command = select)\n",
-    "#button.pack(side='left', padx=20, pady=10)\n",
-    "\n",
-    "root.mainloop()'''"
    ]
   }
  ],
