--- a/Pooling for Sequencing.ipynb
+++ b/Pooling for Sequencing.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,33 +168,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "def library_number_and_names():\n",
     "    lib_num = input(\"How many libraries are you sequencing? \")\n",
     "    lib_num = int(lib_num) \n",
-    "    lib_names = []\n",
-    "    lib_names_set = set()\n",
-    "    count_lib_names = lib_names.count\n",
+    "    lib_names = {}\n",
     "    for i in range(lib_num):\n",
-    "        while len(lib_names) == len(lib_names_set):\n",
-    "        name = input(\"What is the name of your library? \")\n",
-    "        lib_names.append(name)\n",
-    "        lib_names_set.add(name)\n",
-    "            if len(lib_names) != len(lib_names_set):\n",
-    "                break\n",
-    "                print(\"you repeated names\")\n",
-    "            \n",
+    "        question = \"What is the name of library number \" + str(i) + \"? \"\n",
+    "        lib_names[i] = input(question)\n",
     "    return lib_num, lib_names\n",
     "\n",
-    "### this needs work to prevent people using same name twice\n"
+    "### this needs to be a dictionary to prevent people using same name twice\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -242,11 +235,18 @@
      "output_type": "stream",
      "text": [
       "Hello user! This script will help you pool your libraries for sequencing. Just follow the instructions on the screen.\n",
-      "How many libraries are you sequencing? 3\n",
-      "What is the name of your library? bob\n",
-      "What is the name of your library? bob\n",
-      "What is the name of your library? joe\n",
-      "you repeated names\n"
+      "How many libraries are you sequencing? 5\n",
+      "What is the name of library number 0? bob\n",
+      "What is the name of library number 1? joe\n",
+      "What is the name of library number 2? joe\n",
+      "What is the name of library number 3? joe\n",
+      "What is the name of library number 4? joe\n",
+      "How many samples in 0? 3\n",
+      "How many samples in 1? 4\n",
+      "How many samples in 2? 5\n",
+      "How many samples in 3? 3\n",
+      "How many samples in 4? 1\n",
+      "NovaSeq S4 4 Lanes (8 billion clusters $30,780) 350 range(4, 10) 5 {0: 'bob', 1: 'joe', 2: 'joe', 3: 'joe', 4: 'joe'} {0: '3', 1: '4', 2: '5', 3: '3', 4: '1'}\n"
      ]
     }
    ],
