--- a/Pooling for Sequencing.ipynb
+++ b/Pooling for Sequencing.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,8 +177,9 @@
     "    lib_num = int(lib_num) \n",
     "    lib_names = {}\n",
     "    for i in range(lib_num):\n",
-    "        question = \"What is the name of library number \" + str(i) + \"? \"\n",
-    "        lib_names[i] = input(question)\n",
+    "        question = \"You must use unique names. What is the name of library number \" + str(i) + \"? \"\n",
+    "        question2 = \"How many samples in this library? \"\n",
+    "        lib_names[input(question2)]= [input(question)]\n",
     "    return lib_num, lib_names\n",
     "\n",
     "### this needs to be a dictionary to prevent people using same name twice\n",
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,15 +220,15 @@
     "    sequencer = pick_sequencer()\n",
     "    volume_input_uL, concentration_nM = sequencer_param(sequencer)\n",
     "    lib_num, lib_names = library_number_and_names()\n",
-    "    dictionary_of_libraries = samples_per_lib_and_reads_per_sample(lib_num, lib_names)\n",
+    "    #dictionary_of_libraries = samples_per_lib_and_reads_per_sample(lib_num, lib_names)\n",
     "    \n",
     "\n",
-    "    print(sequencer, volume_input_uL, concentration_nM, lib_num, lib_names, dictionary_of_libraries)"
+    "    print(sequencer, volume_input_uL, concentration_nM, lib_num, lib_names)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -235,18 +236,14 @@
      "output_type": "stream",
      "text": [
       "Hello user! This script will help you pool your libraries for sequencing. Just follow the instructions on the screen.\n",
-      "How many libraries are you sequencing? 5\n",
-      "What is the name of library number 0? bob\n",
-      "What is the name of library number 1? joe\n",
-      "What is the name of library number 2? joe\n",
-      "What is the name of library number 3? joe\n",
-      "What is the name of library number 4? joe\n",
-      "How many samples in 0? 3\n",
-      "How many samples in 1? 4\n",
-      "How many samples in 2? 5\n",
-      "How many samples in 3? 3\n",
-      "How many samples in 4? 1\n",
-      "NovaSeq S4 4 Lanes (8 billion clusters $30,780) 350 range(4, 10) 5 {0: 'bob', 1: 'joe', 2: 'joe', 3: 'joe', 4: 'joe'} {0: '3', 1: '4', 2: '5', 3: '3', 4: '1'}\n"
+      "How many libraries are you sequencing? 3\n",
+      "You must use unique names. What is the name of library number 0? Bob\n",
+      "How many samples in this library? 1\n",
+      "You must use unique names. What is the name of library number 1? Bob\n",
+      "How many samples in this library? 1\n",
+      "You must use unique names. What is the name of library number 2? Tod\n",
+      "How many samples in this library? 1\n",
+      "NovaSeq S4 4 Lanes (8 billion clusters $30,780) 350 range(4, 10) 3 {'1': ['Tod']}\n"
      ]
     }
    ],
