--- a/Pooling for Sequencing.ipynb
+++ b/Pooling for Sequencing.ipynb
@@ -6,19 +6,19 @@
    "source": [
     "## Pooling for Sequencing\n",
     "\n",
-    "### Converting a confusing spreadsheet to an automated pooling protocol\n",
+    "### Converts a confusing spreadsheet to an automated pooling protocol\n",
     "\n",
     "### Goals:\n",
     "\n",
     "*  Create a script that will calculate how to evenly or unevenly pool samples for different sequencers\n",
     "\n",
-    "* Provide drop down menu of sequencer options for user to chose from (all have different total read capacities and loading requirements, so selection must then be linked to those details in some way -- library/dictionary/ect)\n",
+    "* Provide GUI drop down menu of sequencer options for user to chose from (all have different total read capacities and loading requirements, so selection must then be linked to those details in some way -- library/dictionary/ect)\n",
     "\n",
-    "* Give total concentration of that final library\n",
+    "* Give total concentration of that final library to determine dilution needs, if any\n",
     "\n",
     "* Asks if user wants phix and what percentage, then calculate how many reads go to phix, and how many leftover for samples\n",
     "\n",
-    "* Asks ask how many libraries going on\n",
+    "* Asks user how many libraries going on\n",
     "\n",
     "* Asks for number of samples per library, number of reads per sample, ng/ul, % of library between 200-1000 base pair length, base pair length average\n",
     "\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "metadata": {
     "scrolled": true
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,19 +168,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "def library_number_and_names():\n",
     "    lib_num = input(\"How many libraries are you sequencing? \")\n",
     "    lib_num = int(lib_num) \n",
-    "    lib_names = {}\n",
+    "    dictionary_of_libraries = {}\n",
     "    for i in range(lib_num):\n",
     "        question = \"You must use unique names. What is the name of library number \" + str(i) + \"? \"\n",
     "        question2 = \"How many samples in this library? \"\n",
-    "        lib_names[input(question2)]= [input(question)]\n",
-    "    return lib_num, lib_names\n",
+    "        dictionary_of_libraries[i]= [input(question)], [input(question2)]\n",
+    "    return lib_num, dictionary_of_libraries\n",
     "\n",
     "### this needs to be a dictionary to prevent people using same name twice\n",
     "\n"
@@ -188,30 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def samples_per_lib_and_reads_per_sample(lib_num, lib_names):\n",
-    "    dictionary_of_libraries = {}\n",
-    "    for name in lib_names:\n",
-    "        input_text = \"How many samples in \" + str(name) + \"? \"\n",
-    "        dictionary_of_libraries[name] = input(input_text)\n",
-    "        \n",
-    "        \n",
-    "    return dictionary_of_libraries\n",
-    "    \n",
-    "    ### I think I've reached the need to understand\n",
-    "    ### dictionaries better than I do \n",
-    "    ### I want the library name to be key to number of samples maybe?\n",
-    "    ### perhaps I will add the other metrics for that library as a list \n",
-    "    ### that's attached to a key in a dictionary? or should I use df???\n",
-    "        \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,16 +196,15 @@
     "    print(\"Hello user! This script will help you pool your libraries for sequencing. Just follow the instructions on the screen.\")\n",
     "    sequencer = pick_sequencer()\n",
     "    volume_input_uL, concentration_nM = sequencer_param(sequencer)\n",
-    "    lib_num, lib_names = library_number_and_names()\n",
-    "    #dictionary_of_libraries = samples_per_lib_and_reads_per_sample(lib_num, lib_names)\n",
+    "    lib_num, dictionary_of_libraries = library_number_and_names()\n",
     "    \n",
     "\n",
-    "    print(sequencer, volume_input_uL, concentration_nM, lib_num, lib_names)"
+    "    print(sequencer, volume_input_uL, concentration_nM, lib_num, dictionary_of_libraries)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -238,12 +214,12 @@
       "Hello user! This script will help you pool your libraries for sequencing. Just follow the instructions on the screen.\n",
       "How many libraries are you sequencing? 3\n",
       "You must use unique names. What is the name of library number 0? Bob\n",
-      "How many samples in this library? 1\n",
-      "You must use unique names. What is the name of library number 1? Bob\n",
-      "How many samples in this library? 1\n",
-      "You must use unique names. What is the name of library number 2? Tod\n",
-      "How many samples in this library? 1\n",
-      "NovaSeq S4 4 Lanes (8 billion clusters $30,780) 350 range(4, 10) 3 {'1': ['Tod']}\n"
+      "How many samples in this library? 2\n",
+      "You must use unique names. What is the name of library number 1? Jay\n",
+      "How many samples in this library? 2\n",
+      "You must use unique names. What is the name of library number 2? Sara\n",
+      "How many samples in this library? 5\n",
+      "NovaSeq S4 4 Lanes (8 billion clusters $30,780) 350 range(4, 10) 3 {0: (['Bob'], ['2']), 1: (['Jay'], ['2']), 2: (['Sara'], ['5'])}\n"
      ]
     }
    ],
