Update Pooling for Sequencing.ipynb

--- a/Pooling for Sequencing.ipynb
+++ b/Pooling for Sequencing.ipynb
@@ -33,7 +33,9 @@
     "* Finally, will calculate dilutions or total volume to provide per sequencer requirements\n",
     "\n",
     "\n",
-    "* Perhaps at the end there is another GUI which allows you to chose a library to change numbers for, i.e. \"which library do you want to change?\" and then \"what pooling aspect do you want to change?\""
+    "* Perhaps at the end there is another GUI which allows you to chose a library to change numbers for, i.e. \"which library do you want to change?\" and then \"what pooling aspect do you want to change?\"\n",
+    "\n",
+    "* I am told this might be better accomplished using dataframes so perhaps that will be a future project. "
    ]
   },
   {
@@ -285,6 +287,9 @@
     "    lib_num, dictionary_of_libraries = library_number_and_names()\n",
     "    dictionary_of_libraries = calculated_library_quant(dictionary_of_libraries)\n",
     "    dictionary_of_libraries, total_reads_all = cont_library_quant(dictionary_of_libraries, reads)\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    print(sequencer, volume_input_uL, concentration_nM, reads, lib_num, dictionary_of_libraries, total_reads_all)\n",
     "    \n",
     "    "
@@ -366,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
