--- a/Pooling for Sequencing.ipynb
+++ b/Pooling for Sequencing.ipynb
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,13 +223,21 @@
     "                print(\"name already exists\")\n",
     "            else:\n",
     "                break\n",
-    "        dictionary_of_libraries[name]= {'number_of_samples':input(question2), 'reads_per_sample':input(question3), 'concentration_library':input(question4), '%_lib_between_200_1000':input(question5), 'average_bp_length':input(question6)}\n",
+    "        percent = None\n",
+    "        while True:\n",
+    "            percent = float(input(question5))\n",
+    "            if percent > 1.0:\n",
+    "                print(\"\\n*In DECIMAL form please\")\n",
+    "            else:\n",
+    "                good_percent = percent\n",
+    "                break\n",
+    "        dictionary_of_libraries[name]= {'number_of_samples':input(question2), 'reads_per_sample':input(question3), 'concentration_library':input(question4), '%_lib_between_200_1000':good_percent, 'average_bp_length':input(question6)}\n",
     "    return lib_num, dictionary_of_libraries\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,16 +275,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#a in this line \" dictionary_of_libraries['total_reads_all'] = a\" is becoming it's own separate dictionary item that we try to iterate over and that doesn't work. "
+    "def minimum_pepetting_value():\n",
+    "    #Will ask user what minimum pipetting value they want to provide\n",
+    "    min_pepetting_value = input(\"What is the minimum pipetting volume you are comfortable with?\")\n",
+    "    return min_pepetting_value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### NOT WORKING, WHY DOES IT ALWAYS DO THE iSeq ONE????\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def barcoding_directions(sequencer):\n",
+    "    check = str(sequencer)\n",
+    "    print(check)\n",
+    "    if \"Miseq\" in check:\n",
+    "        print(\"Instructions for Barcode Direction for MiSeq: \\n If your samples are being sequenced at the CZ BioHub: \\nEnsure barcodes for index 1(i7) are the revcom of what was ordered for all sequencers. \\nEnsure index 2(i5) are the forward sequence.\")\n",
+    "    elif \"Miseq\" not in check:\n",
+    "        print(\"Instructions for Barcode Direction for iSeq, NextSeq, or NovaSeq: \\n If your samples are being sequenced at the CZ BioHub: \\nEnsure barcodes for index 1(i7) are the revcom of what was ordered for all sequencers. \\nEnsure index 2(i5) are also the revcom of what was ordered.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_volume_to_input():\n",
+    "    '''After the user enters in all libraries and their respective information the script will calculate volume to input \n",
+    "    (uL) but if that volume is under the minimum pipetting value, will recalculate so proportionally \n",
+    "    input is greater than that minimum.'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dilutions_per_sequencer_req():\n",
+    "    #Finally, will calculate dilutions or total volume to provide per sequencer requirements\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fix_mistake():\n",
+    "    '''Perhaps at the end there is another GUI which allows you to chose a library to \n",
+    "    change numbers for, i.e. \"which library do you want to change?\" \n",
+    "    and then \"what pooling aspect do you want to change?\"'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,17 +357,19 @@
     "    lib_num, dictionary_of_libraries = library_number_and_names()\n",
     "    dictionary_of_libraries = calculated_library_quant(dictionary_of_libraries)\n",
     "    dictionary_of_libraries, total_reads_all = cont_library_quant(dictionary_of_libraries, reads)\n",
-    "    \n",
+    "    min_pepetting_value = minimum_pepetting_value()\n",
     "    \n",
     "    \n",
     "    print(sequencer, volume_input_uL, concentration_nM, reads, lib_num, dictionary_of_libraries, total_reads_all)\n",
+    "    \n",
+    "    barcode_directions = barcoding_directions(sequencer)\n",
     "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -305,47 +377,33 @@
      "output_type": "stream",
      "text": [
       "Hello user! This script will help you pool your libraries for sequencing. Just follow the instructions on the screen.\n",
-      "How many libraries are you sequencing? 2\n",
+      "How many libraries are you sequencing? 1\n",
       "\n",
       "\n",
-      "What is the name of library number 0? (Unique names are strongly encouraged.) bob\n",
+      "What is the name of library number 0? (Unique names are strongly encouraged.) dsfsdgwe\n",
       "\n",
-      "How many samples in this library? 2\n",
+      "What percentage of your library is between 200 and 1000 base pairs long? (in decimal form please).2\n",
       "\n",
-      "How many reads per sample do you want for this library?2\n",
+      "How many samples in this library? 23432\n",
       "\n",
-      "What is the current concentration of this library in ng/uL?2\n",
+      "How many reads per sample do you want for this library?3\n",
       "\n",
-      "What percentage of your library is between 200 and 1000 base pairs long? (in decimal form please)2\n",
-      "\n",
-      "What is your average base pair length for this library?2\n",
-      "\n",
-      "\n",
-      "What is the name of library number 1? (Unique names are strongly encouraged.) 2\n",
-      "\n",
-      "How many samples in this library? 2\n",
-      "\n",
-      "How many reads per sample do you want for this library?2\n",
-      "\n",
-      "What is the current concentration of this library in ng/uL?2\n",
-      "\n",
-      "What percentage of your library is between 200 and 1000 base pairs long? (in decimal form please)2\n",
+      "What is the current concentration of this library in ng/uL?3\n",
       "\n",
       "What is your average base pair length for this library?2\n",
-      "NovaSeq S4 4 Lanes (8 billion clusters $30,780) 350 range(4, 10) 8000000000 2 {'bob': {'number_of_samples': '2', 'reads_per_sample': '2', 'concentration_library': '2', '%_lib_between_200_1000': '2', 'average_bp_length': '2', 'MW': 1372.7, 'nmol/ul': 0.0029139651781161214, 'nM': 2913.9651781161215, 'total_num_reads_per_library': 4.0, 'proportion_of_pool_total': 0.5}, '2': {'number_of_samples': '2', 'reads_per_sample': '2', 'concentration_library': '2', '%_lib_between_200_1000': '2', 'average_bp_length': '2', 'MW': 1372.7, 'nmol/ul': 0.0029139651781161214, 'nM': 2913.9651781161215, 'total_num_reads_per_library': 4.0, 'proportion_of_pool_total': 0.5}} 8.0\n"
+      "What is the minimum pipetting volume you are comfortable with?3\n",
+      "MiSeq V2 Nano (1 million clusters $300 - $360) 10 range(4, 20) 1000000 1 {'dsfsdgwe': {'number_of_samples': '23432', 'reads_per_sample': '3', 'concentration_library': '3', '%_lib_between_200_1000': 0.2, 'average_bp_length': '2', 'MW': 1372.7, 'nmol/ul': 0.00043709477671741826, 'nM': 437.09477671741826, 'total_num_reads_per_library': 70296.0, 'proportion_of_pool_total': 1.0}} 70296.0\n",
+      "MiSeq V2 Nano (1 million clusters $300 - $360)\n",
+      "Instructions for Barcode Direction for iSeq, NextSeq, or NovaSeq: \n",
+      " If your samples are being sequenced at the CZ BioHub: \n",
+      "Ensure barcodes for index 1(i7) are the revcom of what was ordered for all sequencers. \n",
+      "Ensure index 2(i5) are also the revcom of what was ordered.\n"
      ]
     }
    ],
    "source": [
     "main()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
