--- a/Pooling for Sequencing.ipynb
+++ b/Pooling for Sequencing.ipynb
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
     "Asks if user wants phix and what percentage,\n",
     "calculate how many reads go to phix, and how many leftover for samples'''\n",
     "\n",
-    "def cont_library_quant(dictionary_of_libraries, reads):\n",
+    "def cont_library_quant(dictionary_of_libraries):\n",
     "    a = 0\n",
     "    for i in dictionary_of_libraries:\n",
     "        a = a + float(dictionary_of_libraries[i]['total_num_reads_per_library'])    \n",
@@ -281,51 +281,53 @@
    "source": [
     "def minimum_pepetting_value():\n",
     "    #Will ask user what minimum pipetting value they want to provide\n",
-    "    min_pepetting_value = input(\"What is the minimum pipetting volume you are comfortable with?\")\n",
+    "    min_pepetting_value = input(\"What is the minimum pipetting volume (in ul) that you are comfortable with?\")\n",
     "    return min_pepetting_value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#### NOT WORKING, WHY DOES IT ALWAYS DO THE iSeq ONE????\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "def barcoding_directions(sequencer):\n",
     "    check = str(sequencer)\n",
-    "    print(check)\n",
-    "    if \"Miseq\" in check:\n",
+    "    is_miseq_present = check.find(\"MiSeq\")\n",
+    "    if is_miseq_present > -1:\n",
     "        print(\"Instructions for Barcode Direction for MiSeq: \\n If your samples are being sequenced at the CZ BioHub: \\nEnsure barcodes for index 1(i7) are the revcom of what was ordered for all sequencers. \\nEnsure index 2(i5) are the forward sequence.\")\n",
-    "    elif \"Miseq\" not in check:\n",
+    "    elif is_miseq_present == -1:\n",
     "        print(\"Instructions for Barcode Direction for iSeq, NextSeq, or NovaSeq: \\n If your samples are being sequenced at the CZ BioHub: \\nEnsure barcodes for index 1(i7) are the revcom of what was ordered for all sequencers. \\nEnsure index 2(i5) are also the revcom of what was ordered.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calculate_volume_to_input():\n",
     "    '''After the user enters in all libraries and their respective information the script will calculate volume to input \n",
     "    (uL) but if that volume is under the minimum pipetting value, will recalculate so proportionally \n",
-    "    input is greater than that minimum.'''"
+    "    input is greater than that minimum.'''\n",
+    "    \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-27-f7da217d9afc>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-27-f7da217d9afc>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "def dilutions_per_sequencer_req():\n",
     "    #Finally, will calculate dilutions or total volume to provide per sequencer requirements\n",
@@ -334,32 +336,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fix_mistake():\n",
-    "    '''Perhaps at the end there is another GUI which allows you to chose a library to \n",
-    "    change numbers for, i.e. \"which library do you want to change?\" \n",
-    "    and then \"what pooling aspect do you want to change?\"'''"
+    "#below is not working, why printing none????"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def help_choose(total_reads_all):\n",
+    "    how_many_reads = int(total_reads_all)\n",
+    "    compare = 6000000000 < how_many_reads<= 8000000000\n",
+    "    if compare == True:\n",
+    "        return(\"\\nBased on the total number of reads needed for all libraries, you could sequence using any of the following: \\n-NovaSeq S4 4 Lanes (8 billion clusters $30,780)\")\n",
+    "    \n",
+    "    elif compare == False:\n",
+    "        compare = 4000000000 <how_many_reads<= 6000000000\n",
+    "        if compare == True:\n",
+    "            return(\"\\nBased on the total number of reads needed for all libraries, you could sequence using any of the following: \\n-NovaSeq S4 3 Lanes\")\n",
+    "    \n",
+    "    elif compare == False:\n",
+    "        compare = 3000000000 <how_many_reads<= 4000000000\n",
+    "        if compare == True:\n",
+    "            return(\"\\nBased on the total number of reads needed for all libraries, you could sequence using any of the following: \\n-NovaSeq S4 2 Lanes\")\n",
+    "    \n",
+    "    elif compare == False:\n",
+    "        compare = 2000000000 <how_many_reads<= 3000000000\n",
+    "        if compare == True:\n",
+    "            return(\"\\nBased on the total number of reads needed for all libraries, you could sequence using any of the following: \\n-NovaSeq S2 2 Lanes\")\n",
+    "    \n",
+    "    elif compare == False:\n",
+    "        compare = 1500000000 <how_many_reads<= 2000000000\n",
+    "        if compare == True:\n",
+    "            return(\"\\nBased on the total number of reads needed for all libraries, you could sequence using any of the following: \\n-NovaSeq SP \\n-NovaSeq S4 1 Lane\")\n",
+    "    \n",
+    "    elif compare == False:\n",
+    "        compare = 1100000000 <how_many_reads<= 1500000000\n",
+    "        if compare == True:\n",
+    "            return(\"\\nBased on the total number of reads needed for all libraries, you could sequence using any of the following: \\n-NovaSeq S2 1 Lane\")\n",
+    "    elif compare == False:\n",
+    "        compare = 800000000 <how_many_reads<= 1100000000\n",
+    "        if compare == True:\n",
+    "            return(\"\\nBased on the total number of reads needed for all libraries, you could sequence using any of the following: \\n-NextSeq 2000 P3 (1.1 billion clusters $2762 - $5100)\")\n",
+    "    \n",
+    "    elif compare == False:\n",
+    "        compare = 400000000 <how_many_reads<= 800000000\n",
+    "        if compare == True:\n",
+    "            return(\"\\nBased on the total number of reads needed for all libraries, you could sequence using any of the following: \\n-NovaSeq SP\")\n",
+    "    \n",
+    "    elif compare == False:\n",
+    "        compare = 150000000 <=how_many_reads<= 400000000\n",
+    "        if compare == True:\n",
+    "            return(\"\\nBased on the total number of reads needed for all libraries, you could sequence using any of the following: \\n-NextSeq High Output (400 million clusters $1525 - $4680)\")\n",
+    "    \n",
+    "    elif compare == False:\n",
+    "        compare = 23000000 <how_many_reads<= 150000000\n",
+    "        if compare == True:\n",
+    "            return(\"\\nBased on the total number of reads needed for all libraries, you could sequence using any of the following: \\n-NextSeq Mid Output (150 million clusters $1110 - $1790)\") \n",
+    "    \n",
+    "    elif compare == False:\n",
+    "        compare = 13000000 <how_many_reads<= 23000000\n",
+    "        if compare == True:\n",
+    "            return(\"\\nBased on the total number of reads needed for all libraries, you could sequence using any of the following: \\n-MiSeq V3 (23 million clusters $930 - $1625)\")\n",
+    "    \n",
+    "    elif compare == False:\n",
+    "        compare = 4000000 <how_many_reads<= 13000000\n",
+    "        if compare == True:\n",
+    "            return(\"\\nBased on the total number of reads needed for all libraries, you could sequence using any of the following: \\n-MiSeq V2 (13 million clusters $840 - $1210)\")\n",
+    "    \n",
+    "    elif compare == False:\n",
+    "        compare = 1000000 <=how_many_reads<= 4000000\n",
+    "        if compare == True:\n",
+    "            return(\"\\nBased on the total number of reads needed for all libraries, you could sequence using any of the following: \\n-MiSeq V2 Micro (4 million clusters $450) \\n-iSeq (4 million clusters $625)\")     \n",
+    "    \n",
+    "    elif compare == False:\n",
+    "        compare = how_many_reads<= 1000000\n",
+    "        if compare == True:\n",
+    "            return(\"\\nBased on the total number of reads needed for all libraries, you could sequence using any of the following: \\n-MiSeq V2 Micro (4 million clusters $450) \\n-iSeq (4 million clusters $625)\") \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "def main():\n",
     "    print(\"Hello user! This script will help you pool your libraries for sequencing. Just follow the instructions on the screen.\")\n",
-    "    sequencer = pick_sequencer()\n",
-    "    volume_input_uL, concentration_nM, reads = sequencer_param(sequencer)\n",
     "    lib_num, dictionary_of_libraries = library_number_and_names()\n",
     "    dictionary_of_libraries = calculated_library_quant(dictionary_of_libraries)\n",
-    "    dictionary_of_libraries, total_reads_all = cont_library_quant(dictionary_of_libraries, reads)\n",
+    "    dictionary_of_libraries, total_reads_all = cont_library_quant(dictionary_of_libraries)\n",
     "    min_pepetting_value = minimum_pepetting_value()\n",
-    "    \n",
-    "    \n",
+    "    chosen = help_choose(total_reads_all)\n",
+    "    print(str(chosen))\n",
+    "    sequencer = pick_sequencer()\n",
+    "    volume_input_uL, concentration_nM, reads = sequencer_param(sequencer)\n",
     "    print(sequencer, volume_input_uL, concentration_nM, reads, lib_num, dictionary_of_libraries, total_reads_all)\n",
     "    \n",
     "    barcode_directions = barcoding_directions(sequencer)\n",
@@ -369,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -377,23 +454,49 @@
      "output_type": "stream",
      "text": [
       "Hello user! This script will help you pool your libraries for sequencing. Just follow the instructions on the screen.\n",
-      "How many libraries are you sequencing? 1\n",
+      "How many libraries are you sequencing? 3\n",
       "\n",
       "\n",
-      "What is the name of library number 0? (Unique names are strongly encouraged.) dsfsdgwe\n",
+      "What is the name of library number 0? (Unique names are strongly encouraged.) sdfsd\n",
+      "\n",
+      "What percentage of your library is between 200 and 1000 base pairs long? (in decimal form please).1\n",
+      "\n",
+      "How many samples in this library? 2\n",
+      "\n",
+      "How many reads per sample do you want for this library?12\n",
+      "\n",
+      "What is the current concentration of this library in ng/uL?1212\n",
+      "\n",
+      "What is your average base pair length for this library?1212\n",
+      "\n",
+      "\n",
+      "What is the name of library number 1? (Unique names are strongly encouraged.) 2\n",
       "\n",
       "What percentage of your library is between 200 and 1000 base pairs long? (in decimal form please).2\n",
       "\n",
-      "How many samples in this library? 23432\n",
+      "How many samples in this library? 21\n",
+      "\n",
+      "How many reads per sample do you want for this library?12\n",
+      "\n",
+      "What is the current concentration of this library in ng/uL?21\n",
+      "\n",
+      "What is your average base pair length for this library?212\n",
+      "\n",
+      "\n",
+      "What is the name of library number 2? (Unique names are strongly encouraged.) dsfds\n",
+      "\n",
+      "What percentage of your library is between 200 and 1000 base pairs long? (in decimal form please).3\n",
+      "\n",
+      "How many samples in this library? 3\n",
       "\n",
       "How many reads per sample do you want for this library?3\n",
       "\n",
       "What is the current concentration of this library in ng/uL?3\n",
       "\n",
-      "What is your average base pair length for this library?2\n",
-      "What is the minimum pipetting volume you are comfortable with?3\n",
-      "MiSeq V2 Nano (1 million clusters $300 - $360) 10 range(4, 20) 1000000 1 {'dsfsdgwe': {'number_of_samples': '23432', 'reads_per_sample': '3', 'concentration_library': '3', '%_lib_between_200_1000': 0.2, 'average_bp_length': '2', 'MW': 1372.7, 'nmol/ul': 0.00043709477671741826, 'nM': 437.09477671741826, 'total_num_reads_per_library': 70296.0, 'proportion_of_pool_total': 1.0}} 70296.0\n",
-      "MiSeq V2 Nano (1 million clusters $300 - $360)\n",
+      "What is your average base pair length for this library?23\n",
+      "What is the minimum pipetting volume (in ul) that you are comfortable with?3\n",
+      "None\n",
+      "NovaSeq S4 4 Lanes (8 billion clusters $30,780) 350 range(4, 10) 8000000000 3 {'sdfsd': {'number_of_samples': '2', 'reads_per_sample': '12', 'concentration_library': '1212', '%_lib_between_200_1000': 0.1, 'average_bp_length': '1212', 'MW': 736326.7, 'nmol/ul': 0.00016460084905246545, 'nM': 164.60084905246546, 'total_num_reads_per_library': 24.0, 'proportion_of_pool_total': 0.08421052631578947}, '2': {'number_of_samples': '21', 'reads_per_sample': '12', 'concentration_library': '21', '%_lib_between_200_1000': 0.2, 'average_bp_length': '212', 'MW': 128926.69999999998, 'nmol/ul': 3.2576650143065795e-05, 'nM': 32.5766501430658, 'total_num_reads_per_library': 252.0, 'proportion_of_pool_total': 0.8842105263157894}, 'dsfds': {'number_of_samples': '3', 'reads_per_sample': '3', 'concentration_library': '3', '%_lib_between_200_1000': 0.3, 'average_bp_length': '23', 'MW': 14128.099999999999, 'nmol/ul': 6.370283336046602e-05, 'nM': 63.70283336046602, 'total_num_reads_per_library': 9.0, 'proportion_of_pool_total': 0.031578947368421054}} 285.0\n",
       "Instructions for Barcode Direction for iSeq, NextSeq, or NovaSeq: \n",
       " If your samples are being sequenced at the CZ BioHub: \n",
       "Ensure barcodes for index 1(i7) are the revcom of what was ordered for all sequencers. \n",
