--- a/Pooling for Sequencing.ipynb
+++ b/Pooling for Sequencing.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "* Will ask user what minimum pipetting value they want to provide\n",
     "\n",
-    "* After the user enters in all libraries and their respective information the script will calculate volume to input (uL) but if that volume is under the minimum pipetting value, will recalculate so proportionally input is greater than that minimum.\n",
+    "* After the user enters all libraries and their respective information the script will calculate volume to input (uL) but if that volume is under the minimum pipetting value, will recalculate so proportionally input is greater than that minimum.\n",
     "\n",
     "* Will also provide instructions on barcoding directions depending on sequencer\n",
     "\n",
